[package]
name = "rftp"
version = "0.1.7"
authors = ["Ellis Hoag <ellis.sparky.hoag@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Download and upload files from a server via sftp."
readme = "README.md"
keywords = ["sftp", "ssh", "scp"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ssh2 = "0.9"
libssh2-sys = "0.2"
clap = "2.33"
crossterm = "0.25"
tui = {version = "0.19", default-features = false, features = ['crossterm']}
textwrap = "0.11"
dirs = "2.0"
crossbeam-channel = "0.5"
base64 = "0.12"
rpassword = "4.0"
thiserror = "1.0"
